FEAT: add new pages and scss

--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DWMA project</title>
+  <title>Règle ton cycle - TFE - Maïlys Colasse</title>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <meta name="description" content="">
-  <!-- Meta Partage -->
-  <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles/app.css">
+  <!-- Méta Google -->
+  <meta name="title" content="Règle ton cycle - TFE 2023"/>
+  <meta name="description" content="Vous voulez en apprendre plus sur les menstruations, c'est ici que ça ce passe !"/>
+  
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Règle ton cycle - TFE 2023"/>
+  <meta property="og:description" content="Vous voulez en apprendre plus sur les menstruations, c'est ici que ça ce passe !"/>
+  <meta property="og:url" content="http://mailys-colasse.be/projets/tfe/index.html"/>
+  <meta property="og:image" content="http://mailys-colasse.be/projets/intiale.svg">
+  <meta property="og:type" content="website"/>
 
+  <!-- Twitter Card data -->
+  <meta name="twitter:title" content="Règle ton cycle - TFE 2023"/>
+  <meta name="twitter:description" content="Vous voulez en apprendre plus sur les menstruations, c'est ici que ça ce passe !"/>
+  <meta name="twitter:url" content="http://mailys-colasse.be/projets/tfe/index.html"/>
+  <meta property="twitter:image" content="http://mailys-colasse.be/projets/intiale.svg">
+
+   <!--favicon-->
+   <link rel="icon" href="assets/images/initiale.svg" type='image/svg'>
+
+  <link rel="stylesheet" href="styles/app.css">
   <script src="scripts/app.js" defer></script>
+
 </head>
 <body>
 
-  <img src="assets/images/logo-heaj.png">
-  <h1>Hello world</h1>
+  <div class="contenair">
+    <header>
+
+    </header>
+      <img src="assets/images/logo-heaj.png">
+      <h1>Hello world</h1>
+  </div>
+  <div class="contenair">
+    <main>
+
+    </main>
+  </div>
+  <div class="contenair">
+    <footer>
+      <small class="copy"><a  href="http://dwm.re/"><img class="dwm" src= "assets/images/logodwtd.svg" srcset="assets/images/logodwtd.svg 2x" alt="Logo DWT"/></a>
+        © Maïlys Colasse</small>
+
+      <ul class="menu__list">
+          <li><a class="menu__el menu__el--ui  nav__inactif" href="ui-kit.html">Ui-Kit</a></li> 
+          <li><a class="menu__el menu__el--credits nav__inactif" href="credits.html">Crédits</a></li>
+      </ul>
+
+      <ul class="reseau">
+          <li class="reseau__el reseau__el--insta"><a href="https://www.instagram.com/mailys_dwt/">Instagram</a></li>
+          <li class="reseau__el reseau__el--pinterest"><a href="https://www.pinterest.fr/MaeMailys/_saved/">Pinterest</a></li>
+          <li class="reseau__el reseau__el--mail"><a href="mailto:mailys.colasse@student.heaj.be">Mail</a></li>
+          <li class="reseau__el reseau__el--behance"><a href="https://www.behance.net/colassemalys/">Behance</a></li>
+          
+      </ul>
+    </footer>
+  </div>
 
 </body>
 </html>
